<?xml version="1.0" encoding="utf-8"?>

<resources>
    <!-- Cadenas de texto -->
    <string name="app_name">Weather App</string>
    <string name="welcome_text">Bienvenido a la aplicación del clima</string>
    <string name="current_forecast_button">Clima actual en Santiago</string>
    <string name="city_list_button">Listado del clima actual por ciudad</string>
    <string name="cargando_informaci_n_del_clima">Cargando información del clima...</string>
    <string name="pron_stico_del_clima">Clima actual en Santiago</string>
    <string name="pronostico_ciudades">Listado del clima actual por ciudad</string>
    <string name="weather_description">Clima</string>
    <string name="footer">Creado por Braulio Ruiz Niñoles</string>
</resources>